# AdaBoost-Face-Detection-ML

team3-main/final/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
team3-main/final/bscript/: .__afs023513FE8  .__afs0C6DE58F3  .__afs7D35BA82B  .__afs81F930230  .__afsFDB59B22A  convert  make_408m  raspi
team3-main/final/demo/: CMakeLists.txt  Makefile  cmake_install.cmake  driver.cpp  runme
team3-main/final/doc/: dataset-partition.txt
team3-main/final/src/: CMakeLists.txt  Makefile  README.txt  cmake_install.cmake  makeme  runme
team3-main/final/src/actors/: .__afsD18137670  classifier.cpp  classifier.h  file_sink.cpp  file_sink.h  txt_img_read.cpp  txt_img_read.h
team3-main/final/src/build-raspi/: CMakeCache.txt  Makefile  cmake_install.cmake
team3-main/final/src/graph/: graph.cpp  graph.cpp~  graph.h  graph.h~
team3-main/final/src/util2/: cascadeClassifier.h  featureUtil.cpp  featureUtil.h  strongClassifier.cpp  strongClassifier.h  test.cpp  weakClassifier.cpp  weakClassifier.h
team3-main/final/src/utility/: cascadeClassifier.cpp  featureUtil.cpp  strongClassifier.cpp  strongClassifier.h  weakClassifier.cpp  weakClassifier.h
team3-main/final/test/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
team3-main/final/test/autotest-output/: test_output.txt  test_summary.txt
team3-main/final/test/test01/: CMakeLists.txt  Makefile  README.txt  cmake_install.cmake  convert  correct-out.txt  diagnostic.txt  driver1.cpp  out.txt  runme
team3-main/final/test/test01/autotest-output/: test_output.txt  test_output.txt.bak
team3-main/final/test/test02/: #driver.cpp#  .__afsB88E97220  CMakeLists.txt  Makefile  README.txt  cmake_install.cmake  correct-out.txt  diagnostic.txt  runme
team3-main/final/test/test02/autotest-output/: test_output.txt  test_output.txt.bak
team3-main/final/test/test03/: CMakeLists.txt  Makefile  README.txt  cmake_install.cmake  diagnostic.txt  makeme  out.txt  runme
team3-main/final/test/test03/autotest-output/: test_output.txt  test_output.txt.bak
team3-main/final/training/: README.txt  adaBoost.cpp  adaBoost.h  cascadeClassifier.cpp  cascadeClassifier.h  featureUtil.h  makeme  procImages.cpp  procImages.h  strongClassifier.cpp  strongClassifier.h  test.cpp  weakClassifier.cpp  weakClassifier.h
